kubernetes/apps/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:6.21
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-pv
              mountPath: /var/lib/ghost/content
      volumes:
        - name: ghost-pv
          persistentVolumeClaim:
            claimName: ghost-pvc
